--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,9 @@ ul {
 
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
+  width: 100%;
 }
 
 .list {
@@ -47,10 +50,9 @@ img {
 }
 
 .container {
-  max-width: 1158px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 0 auto;
+  width: 100%;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 .visually-hidden {
@@ -83,14 +85,17 @@ body {
 }
 
 .chapter-subtitle {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
   letter-spacing: 0.02em;
   color: var(--primary-color);
   margin-bottom: var(--head-paragraph-gap);
 }
+
 .chapter-text {
+  font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -98,22 +103,7 @@ body {
 }
 
 .section {
-  padding-bottom: 120px;
-}
-
-.navigation-item .current {
-  color: #404bbf;
-}
-
-.current::after {
-  position: absolute;
-  bottom: -28px;
-  transform: translateX(-100%);
-  content: "";
-  width: 100%;
-  height: 4px;
-  background-color: #404bbf;
-  border-radius: 2px;
+  padding-bottom: 96px;
 }
 
 /* ====================LOGOTYPE==================== */
@@ -138,63 +128,149 @@ body {
 }
 
 /* ====================HEADER==================== */
-.header-box {
-  display: flex;
-}
-
-.navigation {
-  display: flex;
-  gap: 76px;
-}
-
-.navigation-list {
-  display: flex;
-  gap: 40px;
-}
-
-.navigation-link {
-  position: relative;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--primary-color);
-  transition: color var(--transition-dur-func);
-}
-
-.navigation-link:hover,
-.navigation-link:focus {
-  color: var(--active-link-color);
-}
-
-.address {
-  font-style: normal;
-  margin-left: auto;
-}
-
-.address-list {
-  display: flex;
-  gap: 40px;
-}
-
-.address-link {
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--secondary-color);
-  transition: color var(--transition-dur-func);
-}
-
-.address-link:hover,
-.address-link:focus {
-  color: var(--active-link-color);
-}
-
 .header-section {
-  padding: 24px 0;
+  padding-top: 24px;
+  padding-bottom: 24px;
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-bottom-color: #e7e9fc;
+}
+
+.header-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navigation-list {
+  display: none;
+}
+
+.mobile-menu-open {
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  line-height: 0;
+}
+
+.mobile-menu-open-icon {
+  stroke: #2e2f42;
+}
+
+.address {
+  display: none;
+}
+
+/* ====================MOBILE MENU==================== */
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+  transition: opacity var(--transition-dur-func),
+    visibility var(--transition-dur-func);
+}
+
+.mobile-menu.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.mobile-menu-container {
+  position: relative;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-top: 80px;
+  padding-left: 40px;
+  padding-right: 35px;
+  padding-bottom: 40px;
+}
+
+.mobile-menu-close-btn {
+  position: absolute;
+  top: 24px;
+  right: 16px;
+  width: 24px;
+  height: 24px;
+  padding: 0;
+  line-height: 0;
+  background-color: rgba(231, 233, 252, 0.1);
+  border: 1px solid rgba(46, 47, 66, 0.1);
+  border-radius: 50%;
+}
+
+.mobile-menu-close-icon {
+  fill: #2e2f42;
+}
+
+.mobile-menu-page-item {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2e2f42;
+}
+
+.mobile-menu-page-item:not(:last-child) {
+  margin-bottom: 40px;
+}
+
+.mobile-menu-current-item {
+  color: #404bbf;
+}
+
+.mobile-menu-address-list {
+  margin-bottom: 48px;
+}
+.mobile-menu-address-item:not(:last-child) {
+  margin-bottom: 40px;
+}
+.mobile-menu-address-phone {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  color: #4d5ae5;
+}
+
+.mobile-menu-address-mail {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+.mobile-menu-soc-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.mobile-menu-soc-item {
+  width: 40px;
+  height: 40px;
+}
+
+.mobile-menu-soc-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: #4d5ae5;
 }
 
 /* ====================HERO==================== */
@@ -250,32 +326,16 @@ body {
 }
 
 /* ====================VALUES==================== */
-
 .values {
-  padding-top: 120px;
+  padding-top: 96px;
 }
 
 .values-box {
-  margin-bottom: 8px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 264px;
-  height: 112px;
-  background-color: var(--tretiary-background-color);
-  border-radius: 4px;
+  display: none;
 }
 
-.values-list {
-  display: flex;
-}
-
-.values-item {
-  flex-basis: calc(100% / 4);
-}
-
-.values-item:not(:first-child) {
-  margin-left: var(--item-gap);
+.values-item:not(:last-child) {
+  margin-bottom: 72px;
 }
 
 /* ====================ACTIVITY==================== */
