--- a/css/styles.css
+++ b/css/styles.css
@@ -587,15 +587,15 @@ body {
   padding-right: 15px;
 }
 
-.logotype {
+.footer-box-logo-text .logotype {
   display: block;
   text-align: center;
-  margin-bottom: 16px;
 }
 
 .page-end-text {
   width: 268px;
   margin: 0 auto;
+  margin-top: 16px;
   margin-bottom: 72px;
   font-size: 16px;
   line-height: 1.5;
@@ -702,6 +702,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  overflow-y: auto;
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity var(--transition-dur-func),
     visibility var(--transition-dur-func);
@@ -851,7 +852,7 @@ body {
   align-items: center;
   margin-bottom: 24px;
   font-weight: 400;
-  font-size: 7px;
+  font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
